--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
       - uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}
+        #   JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
         
       - name: Test Jfrog CLI
         run: |
-          jf rt ping --url ${{ vars.JF_URL }} --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+          jf rt ping --url=https://krogertechnology.jfrog.io --access-token ${{ secrets.JF_ACCESS_TOKEN }}
