--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn
 pytest
 pylint
 pre-commit
+kayday
 
 # dependency resolution for torch with cuda using pip
 # pip install --upgrade --force-reinstall torch==2.0.1+cu117 --index-url https://download.pytorch.org/whl/cu117
