--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -22,10 +22,13 @@ jobs:
         run: |
           jf rt ping --url=https://krogertechnology.jfrog.io/artifactory --access-token ${{ secrets.JF_ACCESS_TOKEN }}
 
+      - name: echo Access token
+        run: |
+          echo ${{ secrets.JF_ACCESS_TOKEN }}
+
       - name: Pull Docker Image from Artifactory
         run: |
-          jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ 
-          # --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+          jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ --access-token ${{ secrets.JF_ACCESS_TOKEN }}
           # docker pull krogertechnology-docker.jfrog.io/<DOCKER_IMAGE>:<DOCKER_TAG>
           
       - name: Verify Docker Image Pull
