--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -18,20 +18,25 @@ jobs:
         env:
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
         
+      - name: Configures JFROG
+        run: |
+          jfrog config add --artifactory-url=https://https://krogertechnology.jfrog.io/artifactory --user=${{ secrets.ART_SAAS_USER }} --password=${{ secrets.ART_SAAS_PASSWORD }} --interactive=false
+
+        
       - name: Test Jfrog CLI
         run: |
-          jf rt ping --url=https://krogertechnology.jfrog.io/artifactory --access-token ${{ secrets.JF_ACCESS_TOKEN }}
-
+          jf rt ping
+          
       # - name: echo Access token
       #   run: |
       #     echo ${{ secrets.JF_ACCESS_TOKEN }}
 
-      - name: Pull Docker Image from Artifactory
-        run: |
-          jf docker pull krogertechnology-docker-hub.jfrog.io/amd64/alpine:latest --access-token ${{ secrets.JF_ACCESS_TOKEN }}
-          # jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ --access-token ${{ secrets.JF_ACCESS_TOKEN }}
-          # docker pull krogertechnology-docker.jfrog.io/<DOCKER_IMAGE>:<DOCKER_TAG>
+      # - name: Pull Docker Image from Artifactory
+      #   run: |
+      #     # jf docker pull krogertechnology-docker-hub.jfrog.io/amd64/alpine:latest --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+      #     # jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+      #     # docker pull krogertechnology-docker.jfrog.io/<DOCKER_IMAGE>:<DOCKER_TAG>
           
-      - name: Verify Docker Image Pull
-        run: |
-          docker images | grep alpine:latest
+      # - name: Verify Docker Image Pull
+      #   run: |
+      #     docker images | grep alpine:latest
