--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -12,15 +12,19 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ART_SAAS_USER: ${{ secrets.ART_SAAS_USER }}
+      JFROG_SAAS_TOKEN_VALUE: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+      JF_URL: ${{ vars.JF_URL}}
 
     steps:
       - uses: jfrog/setup-jfrog-cli@v4
-        env:
-          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+        # env:
+        #   JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
       - name: 🐸 Configure JFrog CLI
         run: |
-          jfrog config add --url=https://krogertechnology.jfrog.io --user=${{ secrets.ART_SAAS_USER }} --password=${{ secrets.JFROG_SAAS_TOKEN_VALUE }} --interactive=false artifactorySaaS
+          jfrog config add --url=${JF_URL} --user=${ART_SAAS_USER} --password=${JFROG_SAAS_TOKEN_VALUE} --interactive=false artifactorySaaS
         
       # - name: Configures JFROG
       #   run: |
