--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -2,7 +2,7 @@ name: Jfrog Login Auth workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature-docker-build" ]
   pull_request:
     branches: [ "main" ]
 
