--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,14 +31,11 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        # python -m pip install --upgrade pip
-        # pip install flake8 pytest
-        # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        #               python -m pip install --upgrade pip
         echo "[global]" > pip.conf
-        echo "index-url = https://${ART_SAAS_USER}@${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple" >> pip.conf
-        pip install -r requirements.txt
-    - name: Lint with flake8
+        # echo "index-url = https://${ART_SAAS_USER}@${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple" >> pip.conf
+        echo "index-url = https://${ART_SAAS_USER}:${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple >> pip.conf
+        pip3 install -r requirements.txt
+    - name: Lint with flake8ß
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
