--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,13 +35,20 @@ jobs:
         echo "[global]" > ~/.pip/pip.conf
         echo "index-url = https://${ART_SAAS_USER}:${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple" >> pip.conf
         cat ~/.pip/pip.conf
-        pip3 install -r requirements.txt
-    - name: Lint with flake8ß
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # pip3 install -r requirements.txt
+    - name: Confirm pip.conf changes
+      run: echo "$(<~/.pip/pip.conf)"
+
+
+
+
+
+    # - name: Lint with flake8ß
+    #   run: |
+    #     # stop the build if there are Python syntax errors or undefined names
+    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     # - name: Test with pytest
     #   run: |
     #     pytest
