--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,8 @@ jobs:
         # pip3 install -r requirements.txt
     - name: Confirm pip.conf changes
       run: echo "$(<~/.pip/pip.conf)"
+    - name: install requirements
+      run: pip3 install -r requirements.txt
 
 
 
