--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,10 @@ repos:
     # Run the formatter.
     - id: ruff-format
       types_or: [ python, pyi, jupyter ]
-# -   repo: https://github.com/psf/black
-#     rev: 23.9.1
-#     hooks:
-#     -   id: black
+-   repo: https://github.com/psf/black
+    rev: 23.9.1
+    hooks:
+    -   id: black
 # - repo: https://github.com/facebook/usort
 #   rev: v1.0.7
 #   hooks:
