--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -2,7 +2,7 @@ name: Jfrog Login Auth workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature-docker-build" ]
   pull_request:
     branches: [ "main" ]
 
@@ -12,12 +12,29 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ART_SAAS_USER: ${{ secrets.ART_SAAS_USER }}
+      JFROG_SAAS_TOKEN_VALUE: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+      JF_URL: ${{ vars.JF_URL}}
 
     steps:
       - uses: jfrog/setup-jfrog-cli@v4
-        env:
-          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
-        
+
+      - name: 🐸 Configure JFrog CLI
+        run: |
+          jfrog config add --url=${JF_URL} --user=${ART_SAAS_USER} --password=${JFROG_SAAS_TOKEN_VALUE} --interactive=false artifactorySaaS
+
+
       - name: Test Jfrog CLI
         run: |
-          jf rt ping --url=https://krogertechnology.jfrog.io/artifactory --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+          jf rt ping
+
+      # - name: Pull Docker Image from Artifactory
+      #   run: |
+          # jf rt docker-pull krogertechnology-docker-hub.jfrog.io/amd64/alpine:latest --user=${ART_SAAS_USER} --password=${JFROG_SAAS_TOKEN_VALUE} --interactive=false
+      #     # jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ --access-token ${{ secrets.JF_ACCESS_TOKEN }}
+      #     # docker pull krogertechnology-docker.jfrog.io/<DOCKER_IMAGE>:<DOCKER_TAG>
+
+      # - name: Verify Docker Image Pull
+      #   run: |
+      #     docker images | grep alpine:latest
