--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-torch
-torchvision
-onnx
-optuna
-optuna-dashboard
-optuna-fast-fanova
-gunicorn
-pytest
-pylint
-pre-commit
+# torch
+# torchvision
+# onnx
+# optuna
+# optuna-dashboard
+# optuna-fast-fanova
+# gunicorn
+# pytest
+# pylint
+# pre-commit
+kayday
 
 # dependency resolution for torch with cuda using pip
 # pip install --upgrade --force-reinstall torch==2.0.1+cu117 --index-url https://download.pytorch.org/whl/cu117
