--- a/.github/workflows/grogu-docker-build.yml
+++ b/.github/workflows/grogu-docker-build.yml
@@ -3,29 +3,40 @@ name: '🐳 🏗 Build Docker Image'
 on:
   push:
     branches: [ "main", "feature-docker-build" ]
+    tags:
+      - '*'
   pull_request:
     branches: [ "main" ]
+    types: [opened, synchronize, reopened, labeled]
+    labels: [ "canary" ]
 
 permissions:
   contents: read
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, tsa]
+    env:
+      ART_SAAS_USER: ${{ secrets.ART_SAAS_USER }}
+      JFROG_SAAS_TOKEN_VALUE: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+      JF_URL: ${{ vars.JF_URL }}
     steps:
       - name: Checkout Your Repo
         uses: actions/checkout@v3
 
-      - name: Login to Jfrog
-        uses: docker/login-action@v2
+      - name: Run Docker Build
+        uses: krogertechnology/grogu/actions/run-docker-build@v2
         with:
-          registry: krogertechnology-docker.jfrog.io
-          username: ${{ secrets.ART_SAAS_USER }}
-          password: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+          image: krogertechnology-docker.jfrog.io/docker-test/docker-test/alpine:${{ github.sha }}
+          context: .
+          push: true
+          labels-vendor: 'Kroger Technology'
+          jfrog-username: ${{ secrets.ART_SAAS_USER }}
+          jfrog-password: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+          build-args: 'arg1=value1,arg2=value2'
 
-      - name: Build and Run Docker
+      - name: Additional Docker Commands
         run: |
-          docker build -t krogertechnology-docker.jfrog.io/docker-test/docker-test/alpine:${{ github.sha }} -f Dockerfile .
           docker push krogertechnology-docker.jfrog.io/docker-test/docker-test/alpine:${{ github.sha }}
         env:
           JFROG_USERNAME: ${{ secrets.ART_SAAS_USER }}
