--- a/.github/workflows/grogu-docker-build.yml
+++ b/.github/workflows/grogu-docker-build.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main
-      - feature-docker-build
+      - feature-*
+      - feature*
     tags:
       - '*'
   pull_request:
