build env changed

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   Build-Docker:
-    runs-on: [self-hosted, kubernetes]
+    runs-on: ubuntu-latest
     name: Build-Docker-Image
 
     steps:
