--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   DOCKER_REGISTRY: krogertechnology-docker-test.jfrog.io
-  DOCKER_FILE: ./Dockerfile
+  DOCKER_FILE: ./DockerFile
   DOCKER_IMAGE_NAME: pzn-reco-sys/alpine
 
 jobs:
