--- a/.github/workflows/jfrog-flow.yml
+++ b/.github/workflows/jfrog-flow.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           jf rt ping
 
-      # - name: Pull Docker Image from Artifactory
+      #  Test push
       #   run: |
           # jf rt docker-pull krogertechnology-docker-hub.jfrog.io/amd64/alpine:latest --user=${ART_SAAS_USER} --password=${JFROG_SAAS_TOKEN_VALUE} --interactive=false
       #     # jf rt docker-pull docker-remote/alpine:latest --url=https://krogertechnology.jfrog.io/artifactory/ --access-token ${{ secrets.JF_ACCESS_TOKEN }}
