--- a/.github/workflows/grogu-docker-build.yml
+++ b/.github/workflows/grogu-docker-build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - feature/docker-build
+      # - feature/docker-build
     tags:
       - '*'
   pull_request:
