--- a/DockerFile
+++ b/DockerFile
@@ -5,7 +5,11 @@ RUN apk --no-cache add \
     curl \
     tar \
     xz \
-    openssl
+    openssl \
+    python3 \
+    python3-pip
+
+RUN pip3 install numpy
 
 WORKDIR /app
 
