--- a/DockerFile
+++ b/DockerFile
@@ -6,9 +6,8 @@ RUN apk --no-cache add \
     tar \
     xz \
     openssl \
-    python3 \
-    python3-pip
-
+    python3
+    
 RUN pip3 install numpy
 
 WORKDIR /app
