--- a/DockerFile
+++ b/DockerFile
@@ -6,8 +6,9 @@ RUN apk --no-cache add \
     tar \
     xz \
     openssl \
-    python3
-    
+    python3 \
+    py3-pip
+
 RUN pip3 install numpy
 
 WORKDIR /app
