--- a/DockerFile
+++ b/DockerFile
@@ -9,7 +9,10 @@ RUN apk --no-cache add \
     python3 \
     py3-pip
 
-RUN pip3 install numpy
+RUN python3 -m venv .venv \
+&& .venv/bin/activate \
+&& pip install numpy \
+&& deactivate
 
 WORKDIR /app
 
