--- a/DockerFile
+++ b/DockerFile
@@ -9,8 +9,10 @@ RUN apk --no-cache add \
     python3 \
     py3-pip
 
+
+
 RUN python3 -m venv .venv \
-&& .venv/bin/activate \
+&& source .venv/bin/activate \
 && pip install numpy \
 && deactivate
 
