--- a/DockerFile
+++ b/DockerFile
@@ -1,23 +1,9 @@
-FROM alpine:latest
+FROM nvcr.io/nvidia/merlin/merlin-pytorch:23.12
 
-RUN apk --no-cache add \
-    ca-certificates \
-    curl \
-    tar \
-    xz \
-    openssl \
-    python3 \
-    py3-pip
+# Add the requirements.txt file
 
+COPY requirements-build.txt ./requirements-build.txt
 
+# install the requirements
 
-RUN python3 -m venv .venv \
-&& source .venv/bin/activate \
-&& pip install numpy \
-&& deactivate
-
-WORKDIR /app
-
-COPY docker-project-dir /app
-
-CMD ["./run.sh"]
+RUN pip install -r requirements-build.txt
