added pypi secrets

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,6 +15,8 @@ on:
         required: true
       JFROG_SAAS_TOKEN_VALUE:
         required: true
+      PYPI_IDENTITY_TOKEN:
+        required: true
 
 env:
   DOCKER_REGISTRY: krogertechnology-docker-test.jfrog.io
