resolving EOF error

--- a/DockerFile
+++ b/DockerFile
@@ -7,11 +7,9 @@ COPY requirements-build.txt ./requirements-build.txt
 
 # install the requirements
 RUN mkdir -p ~/.pip 
-RUN ls -al ~/.pip
-RUN echo "[global]" > ~/.pip/pip.conf
-RUN echo "index-url = https://${ART_SAAS_USER}:${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple" >> ~/.pip/pip.conf \
+RUN ls -al ~/.pip 
+RUN echo "[global]" > ~/.pip/pip.conf 
+RUN echo "index-url = https://${ART_SAAS_USER}:${PYPI_IDENTITY_TOKEN}@krogertechnology.jfrog.io/artifactory/api/pypi/8451-python-remote/simple" >> ~/.pip/pip.conf
 RUN echo "extra-index-url = https://pypi.org/simple" >> ~/.pip/pip.conf
-
 RUN echo "$(<~/.pip/pip.conf)"
-
 RUN pip install -r requirements-build.txt
