--- a/DockerFile
+++ b/DockerFile
@@ -5,6 +5,10 @@ FROM nvcr.io/nvidia/merlin/merlin-pytorch:23.12
 
 COPY requirements-build.txt ./requirements-build.txt
 
+# Provide Arguments
+ARG ART_SAAS_USER
+ARG PYPI_IDENTITY_TOKEN
+
 # install the requirements
 RUN mkdir -p ~/.pip 
 RUN ls -al ~/.pip 
