--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -46,6 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: "feature/image-build"
+          REPO_OWNER: ankush-tr-kr
       - name: Build and push Docker Image
         run: |
           echo "starting now"
