--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,8 +3,8 @@ name: Build Docker Image
 on:
   push:
     branches:
-      - main
-      - feature/docker-build
+      # - main
+      - feature/merlin-pytorch-build
   workflow_call:
     inputs:
       tag:
@@ -15,11 +15,16 @@ on:
         required: true
       JFROG_SAAS_TOKEN_VALUE:
         required: true
+      PYPI_IDENTITY_TOKEN:
+        required: true
 
 env:
   DOCKER_REGISTRY: krogertechnology-docker-test.jfrog.io
   DOCKER_FILE: ./DockerFile
-  DOCKER_IMAGE_NAME: pzn-reco-sys/alpine
+  ART_SAAS_USER: ${{ secrets.ART_SAAS_USER }}
+  JFROG_SAAS_TOKEN_VALUE: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+  PYPI_IDENTITY_TOKEN: ${{ secrets.PYPI_IDENTITY_TOKEN }}
+  DOCKER_IMAGE_NAME: pzn-reco-sys/merlin-pytorch
 
 jobs:
   Build-Docker:
@@ -27,18 +32,26 @@ jobs:
     name: Build-Docker-Image
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/login-action@v2
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 #fetching tags
+      - uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ secrets.ART_SAAS_USER }}
           password: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
+      - name: Semantic Versioning
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          RELEASE_BRANCHES: "feature/image-build"
+          REPO_OWNER: ankush-tr-kr
       - name: Build and push Docker Image
         run: |
-          # echo "Building Docker image ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ inputs.tag }}"
-          # docker build -f "${{ env.DOCKER_FILE }}" -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ inputs.tag }}" .
-          # docker push "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ inputs.tag }}"
           echo "starting now"
-          echo "Building Docker image ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}"
-          docker build -f "${{ env.DOCKER_FILE }}" -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}" .
-          docker push "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}"
+          echo "Building Docker image ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
+          VERSION=$(git describe --tags --abbrev=0)
+          docker build -f "${{ env.DOCKER_FILE }}" --build-arg ART_SAAS_USER=${{ secrets.ART_SAAS_USER }} --build-arg PYPI_IDENTITY_TOKEN=${{ secrets.PYPI_IDENTITY_TOKEN }} -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION" .
+          # docker build -f "${{ env.DOCKER_FILE }}" --build-arg ART_SAAS_USER=${{ secrets.ART_SAAS_USER }} --build-arg PYPI_IDENTITY_TOKEN=${{ secrets.PYPI_IDENTITY_TOKEN }} -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}" .
+          # docker push "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}"
