--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,15 +3,15 @@ name: Build Docker Image
 on:
   push:
     branches:
-      # - main
-      - feature/merlin-pytorch-build
+      # - release/build
+      - bugfix/*
   workflow_call:
     inputs:
       tag:
         required: true
         type: string
     secrets:
-      ART_SAAS_USER:
+      ART_SAAS_USERNAME:
         required: true
       JFROG_SAAS_TOKEN_VALUE:
         required: true
@@ -20,8 +20,8 @@ on:
 
 env:
   DOCKER_REGISTRY: krogertechnology-docker-test.jfrog.io
-  DOCKER_FILE: ./DockerFile
-  ART_SAAS_USER: ${{ secrets.ART_SAAS_USER }}
+  DOCKER_FILE: ./dockerfile
+  ART_SAAS_USERNAME: ${{ secrets.ART_SAAS_USERNAME }}
   JFROG_SAAS_TOKEN_VALUE: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
   PYPI_IDENTITY_TOKEN: ${{ secrets.PYPI_IDENTITY_TOKEN }}
   DOCKER_IMAGE_NAME: pzn-reco-sys/merlin-pytorch
@@ -41,24 +41,25 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 #fetching tags
+          fetch-depth: 0 
       - uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ secrets.ART_SAAS_USER }}
+          username: ${{ secrets.ART_SAAS_USERNAME }}
           password: ${{ secrets.JFROG_SAAS_TOKEN_VALUE }}
-      - name: Semantic Versioning
-        uses: anothrNick/github-tag-action@1.67.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
-          RELEASE_BRANCHES: "feature/merlin-pytorch-build"
-          REPO_OWNER: ankush-tr-kr
+      # - name: Semantic Versioning
+      #   uses: anothrNick/github-tag-action@1.67.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     DEFAULT_BUMP: patch
+      #     RELEASE_BRANCHES: "release/build"
+      #     REPO_OWNER: krogertechnology
+      - name: Manual Semantic Versioning
+        run: echo "VERSION=0.0.1-base" >> $GITHUB_ENV
       - name: Build and push Docker Image
         run: |
           echo "starting now"
           echo "Building Docker image ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
-          VERSION=$(git describe --tags --abbrev=0)
-          docker build -f "${{ env.DOCKER_FILE }}" --build-arg ART_SAAS_USER=${{ secrets.ART_SAAS_USER }} --build-arg PYPI_IDENTITY_TOKEN=${{ secrets.PYPI_IDENTITY_TOKEN }} -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION" .
-          # docker build -f "${{ env.DOCKER_FILE }}" --build-arg ART_SAAS_USER=${{ secrets.ART_SAAS_USER }} --build-arg PYPI_IDENTITY_TOKEN=${{ secrets.PYPI_IDENTITY_TOKEN }} -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}" .
-          # docker push "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}"
+          # VERSION=$(git describe --tags --abbrev=0)
+          docker build -f "${{ env.DOCKER_FILE }}" --build-arg ART_SAAS_USERNAME=${{ secrets.ART_SAAS_USERNAME }} --build-arg PYPI_IDENTITY_TOKEN=${{ secrets.PYPI_IDENTITY_TOKEN }} -t "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION" .
+          docker push "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
