--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,6 +1,7 @@
 # gsutil
-effodata
-effodata_clickstream
-gsutil
+# effodata
+# effodata_clickstream
+# gsutil
 # google-cloud-cli
-kayday
+# kayday
+
