--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,3 +1,4 @@
+---
 name: Build Docker Image
 
 on:
@@ -50,7 +51,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
       - uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
@@ -64,7 +65,7 @@ jobs:
       #     RELEASE_BRANCHES: "release/build"
       #     REPO_OWNER: krogertechnology
       - name: Manual Semantic Versioning
-        run: echo "VERSION=0.0.1-base" >> $GITHUB_ENV
+        run: echo "VERSION=0.0.2-apt-upgrade" >> $GITHUB_ENV
       - name: Build and push Docker Image
         run: |
           echo "starting now"
