--- a/DockerFile
+++ b/DockerFile
@@ -4,7 +4,7 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-RUN apt-get update && apt-get upgrade
+RUN apt-get update && apt-get upgrade -y
 
 # # Add the requirements.txt file
 # COPY requirements-build.txt ./requirements-build.txt
